<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:id="@+id/body">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/semi_white"
        android:layout_centerVertical="true"
        app:cardCornerRadius="30dp">
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginn"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:hint="@string/masukan_username_email"
                android:paddingLeft="20dp"
                />

            <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"
                android:hint="@string/masukan_password"
                android:paddingLeft="20dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                >
                <CheckBox
                    android:id="@+id/acc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/black"
                    android:buttonTint="@color/black"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5dp"
                    android:text="@string/remember_me"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/to_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginHorizontal="30dp"
                android:background="@color/purple_500"
                android:textColor="@color/semi_white"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/to_register"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="12sp"
                    android:textColor="@color/biru"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>