<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background"
    tools:context=".RegisterActivity"
    android:layout_gravity="center"
    android:id="@+id/body">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/semi_white"
        android:layout_centerVertical="true"
        app:cardCornerRadius="30dp">
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="70dp"
                />


            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/homm"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_username"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email_has_been_activated"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_phone_has_been_registered"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>